# Evaluator

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
interpreter/: CmakeLists.txt  assignment.cpp  assignment.h  environment.cpp  environment.h  expression.cpp  expression.h  sum.cpp  sum.h  value.cpp  value.h  variable.cpp  variable.h
tests/: example  multi_level  reversed_order  simple_sum
